--- a/package.json
+++ b/package.json
@@ -9,17 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@react-navigation/core": "^7.12.1",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "babel-plugin-root-import": "^6.6.0",
+    "clsx": "^2.1.1",
     "expo": "~53.0.13",
     "expo-status-bar": "~2.2.3",
+    "nativewind": "^4.1.23",
     "prettier": "^3.6.2",
     "react": "19.0.0",
-    "react-native": "0.79.4"
+    "react-hook-form": "^7.60.0",
+    "react-native": "0.79.4",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.73.0",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3"
   },
   "private": true
