--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
 		"splash": {
 			"image": "./assets/splash-icon.png",
 			"resizeMode": "contain",
-			"backgroundColor": "#ffffff"
+			"backgroundColor": "#46aa52"
 		},
 		"ios": {
 			"supportsTablet": true
