--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-root-import": "^6.6.0",
     "clsx": "^2.1.1",
     "expo": "~53.0.13",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
     "prettier": "^3.6.2",
@@ -25,7 +26,8 @@
     "react-native": "0.79.4",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-screens": "~4.11.1",
+    "react-native-toast-message": "^2.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
