--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/core": "^7.12.1",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
+    "@tanstack/react-query": "^5.83.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "axios": "^1.10.0",
     "babel-plugin-inline-dotenv": "^1.7.0",
